[tool.poetry]
name = "da_churn"
version = "0.1.0"
description = ""
authors = ["Diego Amicabile <diego.amicabile@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
